--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Ansh Mehta</title>
+    <link rel="icon" type="image/x-icon" href="./Assets/android-chrome-512x512.png">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.css">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.2.0/fonts/remixicon.css" rel="stylesheet" />
     <link rel="stylesheet" href="style.css">
@@ -12,7 +13,7 @@
 
 <body>
     <div id="main">
-        <div class="home">
+        <div class="home" id="Home1">
             <div class="nav">
                 <div class="navbar">
                     <img src="./Assets/HeZwz9TdTF28ofmX_Bg66g-removebg-preview.png" alt="Logo">
@@ -20,7 +21,7 @@
                         <i class="ri-menu-line" id="menuIcon"></i>
                     </div>
                     <div class="rightSide2">
-                        <a href="#Home" class="text-white">Home</a>
+                        <a href="#Home1" class="text-white">Home</a>
                         <a href="#About" class="text-white">About</a>
                         <a href="#Skills" class="text-white">Skills</a>
                         <a href="#Projects" class="text-white">Projects</a>
@@ -271,6 +272,17 @@
             <div class="overlay"></div>
         </div>
 
+
+        <div class="fullScr">
+            <i class="ri-close-line" id="cancelIcon"></i>
+            <div class="full_div1">
+                <a href="#Home1" class="text-white"><h1>Home</h1></a>
+                        <a href="#About" class="text-white"><h1>About</h1></a>
+                        <a href="#Skills" class="text-white"><h1>Skills</h1></a>
+                        <a href="#Projects" class="text-white"><h1>Projects</h1></a>
+                        <a href="#Contact" class="text-white"><h1>Contact</h1></a>
+            </div>
+        </div>
 
     </div>
 
