--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <h1>Ansh Mehta</h1>
                     <h2>Front-end Developer</h2>
                     <div class="buttons">
-                        <button>Resume</button>
+                        <button><a href="./Assets/AnshMehta_Resume.pdf" download>Resume</a></button>
                     </div>
                 </div>
                 <div class="myImage"></div>
@@ -114,31 +114,6 @@
                 </h1>
             </div>
             <div class="center">
-                <!-- <div class="elem"
-                    id="element1"
-                >
-                    <a href="">
-                        <img src="./Assets/Screenshot 2024-05-03 105053.png" alt="">
-                        <h1>Design Matrix</h1>
-                        <h4>2024</h4>
-                    </a>
-                </div>
-                <div class="elem"id="element"><a href="">
-                        <img src="./Assets/Screenshot 2024-05-03 105614.png" alt="">
-                        <h1>StrengthGear</h1>
-                        <h4>2023</h4>
-                    </a>
-                </div> -->
-                <!-- <div class="elem elemlast" id="element">
-                    <a href="">
-                        <img src="./Assets/Screenshot 2024-05-03 105053.png" alt="">
-                        <h1>Lorem</h1>
-                        <h4>2024</h4>
-                    </a>
-                </div> -->
-                <!-- <div id="toast" class="toast">Click on the image to visit the project website
-
-                </div> -->
 
 
                 <div class="content">
@@ -267,7 +242,7 @@
 
             <div class="text">
                 <h1 class="h11">For More <br>Details</h1>
-                <h1 class="h1">Download My Resume</h1>
+                <a href="./Assets/AnshMehta_Resume.pdf" download><h1 class="h1">Download My Resume</h1></a>
             </div>
             <div class="overlay"></div>
         </div>
