--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
             <div class="hire">
                 <div class="Txt">
                     <h1>Contact Me</h1>
-                    <form action="https://api.web3forms.com/submit" method="POST">
+                    <form  id="contactForm">
                         <input type="hidden" name="access_key"  id="accessKey">
                         <input type="text" name="name" id="Name" placeholder="Your Name" autocomplete="off" required>
                         <input type="email" name="email" id="Email" placeholder="Your Email" autocomplete="off" required >
