--- a/index.html
+++ b/index.html
@@ -86,9 +86,9 @@
 
                 <img src="./Assets/TailwindIcon-removebg-preview.png" alt="Tailwind css">
 
-                <img src="./Assets/NodeIcon-removebg-preview.png" alt="Node logo">
+                <!-- <img src="./Assets/NodeIcon-removebg-preview.png" alt="Node logo">
 
-                <img src="./Assets/expressjsIcon-removebg-preview.png" alt="Express Logo">
+                <img src="./Assets/expressjsIcon-removebg-preview.png" alt="Express Logo"> -->
 
                 <img src="./Assets/C_Icon-removebg-preview.png" alt="C logo">
 
