--- a/index.html
+++ b/index.html
@@ -5,131 +5,155 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ansh Mehta</title>
+
     <link rel="icon" type="image/x-icon" href="./Assets/android-chrome-512x512.png">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.css">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.2.0/fonts/remixicon.css" rel="stylesheet" />
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
+<body onload="move()">
+
+
+    <div id="preloader">
+        <div class="text-wrapper">AnshMehta</div>
+        <div id="percent">1%</div>
+        <div id="bar">
+            <div id="barconfrm"></div>
+        </div>
+
+    </div>
+
+
     <div id="main">
-        <div class="home" id="Home1">
-            <div class="nav">
-                <div class="navbar">
-                    <img src="./Assets/HeZwz9TdTF28ofmX_Bg66g-removebg-preview.png" alt="Logo">
-                    <div class="rightSide">
-                        <i class="ri-menu-line" id="menuIcon"></i>
-                    </div>
-                    <div class="rightSide2">
-                        <a href="#Home1" class="text-white">Home</a>
-                        <a href="#About" class="text-white">About</a>
-                        <a href="#Skills" class="text-white">Skills</a>
-                        <a href="#Projects" class="text-white">Projects</a>
-                        <a href="#Contact" class="text-white">Contact</a>
-                    </div>
+        <div class="nav">
+            <div class="navbar">
+                <img src="./Assets/HeZwz9TdTF28ofmX_Bg66g-removebg-preview.png" alt="Logo">
+                <div class="rightSide">
+                    <i class="ri-menu-line" id="menuIcon"></i>
                 </div>
-            </div>
-
-            <div class="Home" id="Home">
-                <div class="mainTxt">
-                    <h2>
-                        Hi! I am
-                    </h2>
-                    <h1>Ansh Mehta</h1>
-                    <h2>Front-end Developer</h2>
-                    <div class="buttons">
-                        <button><a href="./Assets/AnshMehta_Resume.pdf" download>Resume</a></button>
-                    </div>
-                </div>
-                <div class="myImage"></div>
-            </div>
-        </div>
-
-
-        <div class="about" id="About">
-            <div class="anotherImage">
-                <img src="./Assets/Mypic.jpg" alt="Image">
-            </div>
-            <div class="aboutMsg">
-                <h1>👋 Hi There</h1>
-                <div class="msg">
-                    <h2>▫️ I'm a pre-final year IT student based in India.</h2>
-                    <br>
-                    <h2>▫️ 💻 Passionate about frontend development, turning designs into interactive experiences.</h2>
-                    <br>
-                    <h2>
-                        ▫️ 🎨 I have a keen eye for aesthetics and enjoy creating visually appealing user interfaces.
-                    </h2>
-                    <br>
-                    <h2>▫️ 🤝 I enjoy working in teams, exchanging ideas, and bringing projects to life through
-                        collective
-                        effort.</h2>
-                    <br>
-                    <h2>▫️ 🔍 I love diving deep into new technologies and learning how they work.</h2>
+                <div class="rightSide2">
+                    <a href="#Home1" class="text-white">Home</a>
+                    <a href="#About" class="text-white">About</a>
+                    <a href="#Skills" class="text-white">Skills</a>
+                    <a href="#Projects" class="text-white">Projects</a>
+                    <a href="#Contact" class="text-white">Contact</a>
                 </div>
             </div>
         </div>
+        <section class="hide">
+            <div class="home" id="Home1">
 
 
-        <div class="skills" id="Skills">
-            <h1>My Tech Stack</h1>
-            <h2>Techonlogies $ Tools I've been working with recently</h2>
-            <div class="skillImg">
-                <img src="./Assets/htmlIcon-removebg-preview.png" alt="Html Logo">
+                <div class="Home" id="Home">
+                    <div class="mainTxt">
+                        <h2 class="boundingelem">
+                            Hi! I am
+                        </h2>
+                        <h1 class="boundingelem">Ansh Mehta</h1>
+                        <h2 class="boundingelem"><span class="heroSpan"></span></h2>
+                        <div class="buttons">
+                            <button><a href="./Assets/AnshMehta_Resume.pdf" download>Resume</a></button>
+                        </div>
+                    </div>
+                    <div class="myImage"></div>
+                </div>
+            </div>
+        </section>
 
-                <img src="./Assets/cssIcon-removebg-preview.png" alt="css logo">
+        <section class="hide">
+            <div class="about" id="About">
+                <div class="anotherImage">
+                    <img src="./Assets/Mypic.jpg" alt="Image">
+                </div>
+                <div class="aboutMsg">
+                    <h1>👋 Hi There</h1>
+                    <div class="msg">
+                        <h2>▫️ I'm a pre-final year IT student based in India.</h2>
+                        <br>
+                        <h2>▫️ 💻 Passionate about frontend development, turning designs into interactive experiences.
+                        </h2>
+                        <br>
+                        <h2>
+                            ▫️ 🎨 I have a keen eye for aesthetics and enjoy creating visually appealing user
+                            interfaces.
+                        </h2>
+                        <br>
+                        <h2>▫️ 🤝 I enjoy working in teams, exchanging ideas, and bringing projects to life through
+                            collective
+                            effort.</h2>
+                        <br>
+                        <h2>▫️ 🔍 I love diving deep into new technologies and learning how they work.</h2>
+                    </div>
+                </div>
+            </div>
+        </section>
 
-                <img src="./Assets/jsIcon-removebg-preview.png" alt="Js logo">
 
-                <img src="./Assets/png-transparent-react-javascript-angularjs-ionic-github-text-logo-symmetry-thumbnail-removebg-preview.png"
-                    alt="React logo">
 
-                <img src="./Assets/TailwindIcon-removebg-preview.png" alt="Tailwind css">
+        <section class="hide">
+            <div class="skills" id="Skills">
+                <h1>My Tech Stack</h1>
+                <h2>Techonlogies $ Tools I've been working with recently</h2>
+                <div class="skillImg">
+                    <img src="./Assets/htmlIcon-removebg-preview.png" alt="Html Logo">
 
-                <!-- <img src="./Assets/NodeIcon-removebg-preview.png" alt="Node logo">
+                    <img src="./Assets/cssIcon-removebg-preview.png" alt="css logo">
+
+                    <img src="./Assets/jsIcon-removebg-preview.png" alt="Js logo">
+
+                    <img src="./Assets/png-transparent-react-javascript-angularjs-ionic-github-text-logo-symmetry-thumbnail-removebg-preview.png"
+                        alt="React logo">
+
+                    <img src="./Assets/TailwindIcon-removebg-preview.png" alt="Tailwind css">
+
+                    <!-- <img src="./Assets/NodeIcon-removebg-preview.png" alt="Node logo">
 
                 <img src="./Assets/expressjsIcon-removebg-preview.png" alt="Express Logo"> -->
 
-                <img src="./Assets/C_Icon-removebg-preview.png" alt="C logo">
+                    <img src="./Assets/C_Icon-removebg-preview.png" alt="C logo">
 
-                <img src="./Assets/CppIcon-removebg-preview.png" alt="CPP logo">
+                    <img src="./Assets/CppIcon-removebg-preview.png" alt="CPP logo">
 
-                <img src="./Assets/java-logo-1-removebg-preview.png" alt="java logo">
+                    <img src="./Assets/java-logo-1-removebg-preview.png" alt="java logo">
 
-                <img src="./Assets/npmIcon-removebg-preview.png" alt="npm logo">
+                    <img src="./Assets/npmIcon-removebg-preview.png" alt="npm logo">
 
-                <img src="./Assets/vscodeicon-removebg-preview.png" alt="vs code">
+                    <img src="./Assets/vscodeicon-removebg-preview.png" alt="vs code">
 
-                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQg1zUVQHkDxdmzVjvC91ayfFF_czdOZky7Nhl8D5zdlw&s"
-                    alt="github logo">
-            </div>
-        </div>
-
-
-        
-        <div class="mainDiv" id="Projects">
-            <div class="top">
-                <h1 id="top_h1">
-                    PROJECTS
-                </h1>
-            </div>
-            <div class="center">
-
-
-                <div class="content">
-                    <h4>Projects</h4>
-                    <h3><i>Browse</i> the work that define a <i>movement</i> and created a craft.</h3>
-                    <div class="btn">
-                        <!-- <h5>ENTER GALLERY</h5> -->
-                        <button>Enter Gallary</button>
-                    </div>
-                    <h2>(2)</h2>
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQg1zUVQHkDxdmzVjvC91ayfFF_czdOZky7Nhl8D5zdlw&s"
+                        alt="github logo">
                 </div>
             </div>
-            <div class="bottom">
-                <h1 id="bottom_h1">PROJECTS</h1>
+        </section>
+
+
+
+        <section class="hide">
+            <div class="mainDiv" id="Projects">
+                <div class="top">
+                    <h1 id="top_h1">
+                        PROJECTS
+                    </h1>
+                </div>
+                <div class="center">
+
+
+                    <div class="content">
+                        <h4>Projects</h4>
+                        <h3><i>Browse</i> the work that define a <i>movement</i> and created a craft.</h3>
+                        <div class="btn">
+                            <!-- <h5>ENTER GALLERY</h5> -->
+                            <button>Enter Gallary</button>
+                        </div>
+                        <h2>(2)</h2>
+                    </div>
+                </div>
+                <div class="bottom">
+                    <h1 id="bottom_h1">PROJECTS</h1>
+                </div>
             </div>
-        </div>
+        </section>
 
 
         <div class="marquee">
@@ -209,24 +233,42 @@
             </div>
         </div>
 
+        <section class="hide">
+            <div id="Contact">
+                <div class="hire">
+                    <div class="Txt">
+                        <h1>Cont<span>act Me</span></h1>
+                        <form id="contactForm">
+                            <input type="hidden" name="access_key" id="accessKey">
 
-        <div id="Contact">
-            <div class="hire">
-                <div class="Txt">
-                    <h1>Contact Me</h1>
-                    <form  id="contactForm">
-                        <input type="hidden" name="access_key"  id="accessKey">
-                        <input type="text" name="name" id="Name" placeholder="Your Name" autocomplete="off" required>
-                        <input type="email" name="email" id="Email" placeholder="Your Email" autocomplete="off" required >
-                        <input type="text" name="subject" id="Subject" placeholder="Subject" autocomplete="off" required>
-                        <textarea name="message" id="Message"  placeholder="Your Message" rows="3" id="textarea" autocomplete="off" required></textarea>
-                        <!-- <div class="h-captcha" data-captcha="true"></div> -->
-                        <button type="submit">Send Message</button>
-                    </form>
+                            <div class="form-group">
+                                <input type="text" name="name" id="Name" required autocomplete="off">
+                                <label for="Name">Your Name</label>
+                            </div>
+
+                            <div class="form-group">
+                                <input type="email" name="email" id="Email" required autocomplete="off">
+                                <label for="Email">Your Email</label>
+                            </div>
+
+                            <div class="form-group">
+                                <input type="text" name="subject" id="Subject" required autocomplete="off">
+                                <label for="Subject">Subject</label>
+                            </div>
+
+                            <div class="form-group">
+                                <textarea name="message" id="Message" rows="3" autocomplete="off" required></textarea>
+                                <label for="Message">Your Message</label>
+                            </div>
+                            <!-- <div class="h-captcha" data-captcha="true"></div> -->
+                            <button type="submit" class="custom-button">Send Message</button>
+                        </form>
+                    </div>
+                    <div class="myImage" id="pic"></div>
                 </div>
-                <div class="myImage" id="pic"></div>
             </div>
-        </div>
+        </section>
+
 
 
         <div class="re">
@@ -239,12 +281,14 @@
                 </div>
                 <div class="img" id="imgThree">
                     <img src="./Assets/AM_Resume_pic3.png" alt="">
-                </div> 
+                </div>
             </div>
 
             <div class="text">
                 <h1 class="h11">For More <br>Details</h1>
-                <a href="./Assets/AnshMehta_Resume.pdf" download><h1 class="h1">Download My Resume</h1></a>
+                <a href="./Assets/AnshMehta_Resume.pdf" download>
+                    <h1 class="h1">Download My Resume</h1>
+                </a>
             </div>
             <div class="overlay"></div>
         </div>
@@ -253,15 +297,28 @@
         <div class="fullScr">
             <i class="ri-close-line" id="cancelIcon"></i>
             <div class="full_div1">
-                <a href="#Home1" class="text-white"><h1>Home</h1></a>
-                        <a href="#About" class="text-white"><h1>About</h1></a>
-                        <a href="#Skills" class="text-white"><h1>Skills</h1></a>
-                        <a href="#Projects" class="text-white"><h1>Projects</h1></a>
-                        <a href="#Contact" class="text-white"><h1>Contact</h1></a>
+                <a href="#Home1" class="text-white">
+                    <h1>Home</h1>
+                </a>
+                <a href="#About" class="text-white">
+                    <h1>About</h1>
+                </a>
+                <a href="#Skills" class="text-white">
+                    <h1>Skills</h1>
+                </a>
+                <a href="#Projects" class="text-white">
+                    <h1>Projects</h1>
+                </a>
+                <a href="#Contact" class="text-white">
+                    <h1>Contact</h1>
+                </a>
             </div>
         </div>
 
     </div>
+
+
+
 
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"
@@ -270,7 +327,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js"
         integrity="sha512-onMTRKJBKz8M1TnqqDuGBlowlH0ohFzMXYRNebz+yOcc5TQr/zAKsthzhuv0hiyUKEiQEQXEynnXCvNTOk50dg=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-        <script src="https://web3forms.com/client/script.js" async defer></script>
+    <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
+    <script src="https://web3forms.com/client/script.js" async defer></script>
+
     <script src="script.js"></script>
 </body>
 
