Make some Changes in Contact Form and Preloader

--- a/index.html
+++ b/index.html
@@ -242,22 +242,22 @@
                             <input type="hidden" name="access_key" id="accessKey">
 
                             <div class="form-group">
-                                <input type="text" name="name" id="Name" required autocomplete="off">
+                                <input type="text" name="name" id="Name" required autocomplete="off" placeholder="">
                                 <label for="Name">Your Name</label>
                             </div>
 
                             <div class="form-group">
-                                <input type="email" name="email" id="Email" required autocomplete="off">
+                                <input type="email" name="email" id="Email" required autocomplete="off" placeholder="">
                                 <label for="Email">Your Email</label>
                             </div>
 
                             <div class="form-group">
-                                <input type="text" name="subject" id="Subject" required autocomplete="off">
+                                <input type="text" name="subject" id="Subject" required autocomplete="off" placeholder="">
                                 <label for="Subject">Subject</label>
                             </div>
 
                             <div class="form-group">
-                                <textarea name="message" id="Message" rows="3" autocomplete="off" required></textarea>
+                                <textarea name="message" id="Message" rows="3" autocomplete="off" required placeholder=""></textarea>
                                 <label for="Message">Your Message</label>
                             </div>
                             <!-- <div class="h-captcha" data-captcha="true"></div> -->
