--- a/index.html
+++ b/index.html
@@ -53,6 +53,10 @@
                         <h2 class="boundingelem"><span class="heroSpan"></span></h2>
                         <div class="buttons">
                             <button><a href="./Assets/AnshMehta_Resume.pdf" download>Resume</a></button>
+                            <div class="link"><a href="https://github.com/AnshMehta24" target="_blank"><i class="ri-github-fill"></i></a>
+                                <a href="https://x.com/anshmehta24" target="_blank"><i class="ri-twitter-x-fill"></i></a>
+                                <a href="https://www.linkedin.com/in/ansh-mehta-171168249/" target="_blank"><i class="ri-linkedin-box-fill"></i></a>
+                            </div>
                         </div>
                     </div>
                     <div class="myImage"></div>
