--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Hi there! I'm Ansh Mehta, and welcome to my dynamic portfolio. Immerse yourself in a world of digital craftsmanship as I showcase my expertise in web development. From sleek designs to seamless user experiences, explore the culmination of my passion and skills. Elevate your online presence with Ansh Mehta's portfolio. Let's bring your vision to life. Dive in now!">
     <title>Ansh Mehta</title>
 
     <link rel="icon" type="image/x-icon" href="./Assets/android-chrome-512x512.png">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.2.0/fonts/remixicon.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -301,19 +303,19 @@
             <i class="ri-close-line" id="cancelIcon"></i>
             <div class="full_div1">
                 <a href="#Home1" class="text-white">
-                    <h1>Home</h1>
+                    <h2>Home</h2>
                 </a>
                 <a href="#About" class="text-white">
-                    <h1>About</h1>
+                    <h2>About</h2>
                 </a>
                 <a href="#Skills" class="text-white">
-                    <h1>Skills</h1>
+                    <h2>Skills</h2>
                 </a>
                 <a href="#Projects" class="text-white">
-                    <h1>Projects</h1>
+                    <h2>Projects</h2>
                 </a>
                 <a href="#Contact" class="text-white">
-                    <h1>Contact</h1>
+                    <h2>Contact</h2>
                 </a>
             </div>
         </div>
@@ -332,6 +334,8 @@
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
     <script src="https://web3forms.com/client/script.js" async defer></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
 
     <script src="script.js"></script>
 </body>
