--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Hi there! I'm Ansh Mehta, and welcome to my dynamic portfolio. Immerse yourself in a world of digital craftsmanship as I showcase my expertise in web development. From sleek designs to seamless user experiences, explore the culmination of my passion and skills. Elevate your online presence with Ansh Mehta's portfolio. Let's bring your vision to life. Dive in now!">
+    <meta name="description"
+        content="Hi there! I'm Ansh Mehta, and welcome to my dynamic portfolio. Immerse yourself in a world of digital craftsmanship as I showcase my expertise in web development. From sleek designs to seamless user experiences, explore the culmination of my passion and skills. Elevate your online presence with Ansh Mehta's portfolio. Let's bring your vision to life. Dive in now!">
     <title>Ansh Mehta</title>
 
     <link rel="icon" type="image/x-icon" href="./Assets/android-chrome-512x512.png">
@@ -55,9 +56,12 @@
                         <h2 class="boundingelem"><span class="heroSpan"></span></h2>
                         <div class="buttons">
                             <button><a href="./Assets/AnshMehta_Resume.pdf" download>Resume</a></button>
-                            <div class="link"><a href="https://github.com/AnshMehta24" target="_blank"><i class="ri-github-fill"></i></a>
-                                <a href="https://x.com/anshmehta24" target="_blank"><i class="ri-twitter-x-fill"></i></a>
-                                <a href="https://www.linkedin.com/in/ansh-mehta-171168249/" target="_blank"><i class="ri-linkedin-box-fill"></i></a>
+                            <div class="link"><a href="https://github.com/AnshMehta24" target="_blank"><i
+                                        class="ri-github-fill"></i></a>
+                                <a href="https://x.com/anshmehta24" target="_blank"><i
+                                        class="ri-twitter-x-fill"></i></a>
+                                <a href="https://www.linkedin.com/in/ansh-mehta-171168249/" target="_blank"><i
+                                        class="ri-linkedin-box-fill"></i></a>
                             </div>
                         </div>
                     </div>
@@ -257,12 +261,14 @@
                             </div>
 
                             <div class="form-group">
-                                <input type="text" name="subject" id="Subject" required autocomplete="off" placeholder="">
+                                <input type="text" name="subject" id="Subject" required autocomplete="off"
+                                    placeholder="">
                                 <label for="Subject">Subject</label>
                             </div>
 
                             <div class="form-group">
-                                <textarea name="message" id="Message" rows="3" autocomplete="off" required placeholder=""></textarea>
+                                <textarea name="message" id="Message" rows="3" autocomplete="off" required
+                                    placeholder=""></textarea>
                                 <label for="Message">Your Message</label>
                             </div>
                             <!-- <div class="h-captcha" data-captcha="true"></div> -->
